--- a/src/main/webapp/userprofile.html
+++ b/src/main/webapp/userprofile.html
@@ -27,14 +27,28 @@
         <link rel="stylesheet"
         href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css"->
         <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-        <script> 
-          $(function(){
-          $("#template").load("template.html"); 
-          });
-        </script> 
     </head>
     <body onload="getUser()">
-        <div id="template"></div>
+      <div class="dashboard-header w3-card w3-#f8f9fa"> 
+        <div class="nav-container">
+          <div class="nav-brand">
+           <a href="/"> 
+             WikiLoop CivilityCheck
+           </a>
+          </div>
+          <div>
+            <a href="slider.html" class="material-icons"> 
+              view_carousel
+            </a>
+            <a href="/actions.html" class="material-icons">
+              history
+            </a>
+          </div>
+          <div class="user-loggedin ">
+            <a href="userprofile.html">Giano II</a>
+          </div>
+        </div>
+      </div>
         <div class="user-profile-content">
             <div class="user-information">
                 <class class="personal-information-box w3-round w3-card ">
